Authentication, base security, login/logout modul

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 spring.datasource.url=jdbc:sqlserver://DAMJAN-PC\\SQLEXPRESS:1433;databaseName=db2000
 spring.datasource.username=sa
 spring.datasource.password=biceps123
+spring.security.user.name=damko81
+spring.security.user.password=biceps123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
